# RayMarchingTest

./: CMakeLists.txt  README.md
assets/shaders/: shader.frag
src/: GlobalConfig.cpp  GlobalConfig.hpp  Main.cpp  RenderingScreen.cpp  RenderingScreen.hpp
